extended/fixed bagri-distr build