@@ -20,8 +20,9 @@
         <!--switch the args0 code for debug-->
         <run.jvm.args0></run.jvm.args0>
         <!--<run.jvm.args0>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</run.jvm.args0>-->
-        <run.jvm.args1>-server -Xms512m -Xmx2048m -XX:MaxNewSize=128m -XX:+ExplicitGCInvokesConcurrent</run.jvm.args1>
-        <run.jvm.args2>-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode</run.jvm.args2>
+        <run.jvm.args1>-server -Xms1024m -Xmx1024m -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+ExplicitGCInvokesConcurrent -XX:+UnlockDiagnosticVMOptions -XX:ParGCCardsPerStrideChunk=2048</run.jvm.args1>
+        <run.jvm.args2>-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSScavengeBeforeRemark -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSConcurrentMTEnabled</run.jvm.args2>
+        <run.jvm.args3>-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError -Xloggc:./logs/gc/gc.log -XX:GCLogFileSize=50M -XX:NumberOfGCLogFiles=10 -XX:+UseGCLogFileRotation</run.jvm.args3>
     </properties>
 
     <dependencies>
@@ -66,10 +67,10 @@
             <artifactId>bagri-xquery-saxon</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>com.sdv.bagri</groupId>
             <artifactId>bagri-xdm-access-api</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>javax.xml.xquery</groupId>
@@ -186,8 +187,8 @@
                                 <configuration>
                                     <tasks if="run-admin">
                                         <java fork="true" classname="com.bagri.xdm.cache.hazelcast.XDMCacheServer">
-                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2}"/>
-                                            <sysproperty key="LOGDIR" value="./logs/"/>
+                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2} ${run.jvm.args3}"/>
+                                            <sysproperty key="node.logdir" value="./logs/"/>
                                             <sysproperty key="com.sun.management.jmxremote" value="true"/>
                                             <!--sysproperty key="com.sun.management.jmxremote.port" value="3333"/>
                                             <sysproperty key="com.sun.management.jmxremote.authenticate" value="true"/-->
@@ -222,17 +223,14 @@
                                 <configuration>
                                     <tasks if="run-first">
                                         <java fork="true" classname="com.bagri.xdm.cache.hazelcast.XDMCacheServer">
-                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2}"/>
-                                            <sysproperty key="LOGDIR" value="./logs/"/>
+                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2} ${run.jvm.args3}"/>
+                                            <sysproperty key="node.logdir" value="./logs/"/>
                                             <!--sysproperty key="com.sun.management.jmxremote" value="true"/>
                                             <sysproperty key="com.sun.management.jmxremote.authenticate" value="false"/>
                                             <sysproperty key="com.sun.management.jmxremote.ssl" value="false"/-->
                                             <sysproperty key="logback.configurationFile" value="xdm-cache-logging.xml"/>
                                             <sysproperty key="xdm.config.path" value="src/main/resources"/>
 					    <sysproperty key="xdm.server.properties.file" value="xdm-server-first.properties"/>
-                                            <sysproperty key="xdm.cluster.node.name" value="first"/>
-                                            <sysproperty key="xdm.cluster.node.role" value="server"/>
-                                            <sysproperty key="xdm.cluster.node.schemas" value="TPoX"/>
                                             <classpath>
                                                 <path refid="maven.compile.classpath"/>
                                                 <path refid="maven.runtime.classpath"/>
@@ -253,8 +251,8 @@
                                 <configuration>
                                     <tasks if="run-second">
                                         <java fork="true" classname="com.bagri.xdm.cache.hazelcast.XDMCacheServer">
-                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2}"/>
-                                            <sysproperty key="LOGDIR" value="./logs/"/>
+                                            <jvmarg line="${run.jvm.args0} ${run.jvm.args1} ${run.jvm.args2} ${run.jvm.args3}"/>
+                                            <sysproperty key="node.logdir" value="./logs/"/>
                                             <!--sysproperty key="com.sun.management.jmxremote" value="true"/>
                                             <sysproperty key="com.sun.management.jmxremote.authenticate" value="false"/>
                                             <sysproperty key="com.sun.management.jmxremote.ssl" value="false"/-->
